# setup.cfg file at the root directory
[metadata]
name = ebyte-lora-e32-rpi
version = 0.0.1
author = Renzo Mischianti
description="Ebyte E32 LoRa raspberrypi library device very cheap and very long range (from 3Km to 8Km). Arduino LoRa EBYTE E32 device library complete and tested with Arduino, esp8266, esp32, STM32 and Raspberry Pi Pico. sx1278/sx1276.",
long_description="Ebyte E32 LoRa raspberrypi library device very cheap and very long range (from 3Km to 8Km). Arduino LoRa EBYTE E32 device library complete and tested with Arduino, esp8266, esp32, STM32 and Raspberry Pi Pico. sx1278/sx1276.",
url = https://github.com/xreef/EByte_LoRa_E32_raspberrypi_library
keywords = LoRa, UART, EByte, RaspberryPi, sx1278, sx1276
[options]
python_requires = >=3.7
# install_requires =
#     pandas
# [options.extras_require]
# test =
#     pytest
#     coverage
[options.package_data]
sample = ['examples/*']
[options.packages.find]
where = src
# [options.entry_points]
# console_scripts =
#     sample=sample:main
# [bdist_wheel]
# universal = 1

